# the_snake

./: flake.nix  pyproject.toml  requirements.txt  the_snake.py
