[project]
name = "the-snake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8==5.0.4",
    "flake8-docstrings==1.7.0",
    "pep8-naming==0.13.3",
    "pycodestyle==2.9.1",
    "pygame>=2.6.1",
    "pytest==7.1.3",
    "pytest-timeout==2.1.0",
]
