[project]
name = "the-snake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8==5.0.4",
    "flake8-docstrings==1.7.0",
    "pep8-naming==0.13.3",
    "pycodestyle==2.9.1",
    "pygame>=2.6.1",
    "pytest==7.1.3",
    "pytest-timeout==2.1.0",
    "ruff>=0.14.2",
]

[tool.ruff]
target-version = "py313"
line-length = 70
indent-width = 4
exclude = [
    ".git/",
    "venv/",
    ".venv/",
    "vscode/",
    "__pycache__/",
    ".ruff_cache/",
]


[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["E", "F", "N", "I", "C90", "T", "S"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
